Add new section: Adjust the eclipse.ini Configuration File.